{
    "name": "MetaControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "02ae2d11-d496-48f8-9b9c-c63d067c9339",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d7f989cb-1a23-47c3-a055-7b03e3927fe2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1adf99dd-9be9-4088-b54e-3a84861dc9ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "Value",
                    "id": "7979daeb-3bac-481c-8053-bcc832342be5",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "cf4c1b97-8962-40ec-adae-6d617db513f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "397e5a30-aa62-4615-ba9f-2f2e0b7a5750",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "543d5582-e3c9-459c-bda9-d56542a2b8ba",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddbd5b40-69c3-42ea-b759-46bcd20729e6",
                    "path": "<XRInputV1::Oculus::OculusHeadset2>/devicerotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackedDeviceOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16467bc8-7c24-4e22-a307-7884d4aefa52",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}